@@ -22,6 +22,7 @@ NOTES:
 (tx XYZ): thanks to XYZ for telling me about the bug
 
 . v 1.16.0214a
+   . <rewbs> fixes to chunk-based FXP loading/saving.
    . <rewbs> fix to allow VST synchronisation when rendering to wav.
    . <rewbs> fix to note playback when pattern record is disabled (tx ganja).
    . <rewbs> fix for VST plugs with >2 outputs, though it is currently assumed they are stereo. (tx Muox, ganja)
